# taobaopyx

./: .gitignore  main.py  makefile  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: CI.yml  Publish.yml
taobaopyx/: taobao.py
tests/: test_api_request.py
