[tool.poetry]
authors = ["duyixian <duyixian1234@qq.com>"]
description = "Asyncio version of taobaopy"
license = "MIT"
name = "taobaopyx"
readme = "README.md"
repository = "https://github.com/duyixian1234/taobaopyx"
version = "0.1.1"

[tool.poetry.dependencies]
httpx = "*"
python = ">=3.9"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
asyncmock = "*"
black = "*"
isort = "*"
mypy = "*"
pylint = "*"
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pylint.master]
job = 0
suggestion-mode = "yes"

[tool.pylint.format]
max-line-length = 120

[tool.pylint.message_control]
disable = ["missing-docstring", "logging-fstring-interpolation"]

[tool.pylint.design]
min-public-methods = 0

[tool.pytest.ini_options]
addopts = " -svv --cov=taobaopyx"
minversion = "6.0"
testpaths = [
  "tests",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]
fail_under = 90.0
show_missing = true
skip_covered = true
skip_empty = true
sort = "miss"

[tool.coverage.path]
source = "taobaopyx"

[tool.black]
line-length = 120
